--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -31,6 +31,8 @@ uk:
     add:
       location: "Додати місце репортажу"
     submit: "Підтвердити"
+    edit: "Редагувати"
+    delete: "Видалити"
 
   delete:
     confirm: "Точно видалити?"
