--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -6,14 +6,17 @@ uk:
       location: "Локацію створено"
       team: "Команду створено"
       tournament: "Турнір створено"
+      stadium: "Стадіон створено"
     update:
       location: "Локацію оновлено"
       team: "Команду оновлено"
       tournament: "Турнір оновлено"
+      stadium: "Стадіон оновлено"
     destroy:
       location: "Локацію видалено"
       team: "Команду видалено"
       tournament: "Турнір видалено"
+      stadium: "Стадіон видалено"
   
   activerecord:
     attributes:
