add uk locale to header

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -48,6 +48,14 @@ uk:
 
   delete:
     confirm: "Точно видалити?"
+  
+  navigation:
+    locations: "Локації"
+    teams: "Команди"
+    stadia: "Стадіони"
+    tournaments: "Турніри"
+
+
 
   locations:
     index:
