add formhelper to stadium form

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -100,6 +100,7 @@ uk:
     form:
       name: "Назва стадіону"
       street: "Вулиця"
+      location: "Населений пункт"
       placeholder:
         name: "Введіть назву стадіону"
         street: "Введіть вулицю та будинок"
