add prompt to stadium form select location

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -35,7 +35,7 @@ uk:
         represent: "Поле 'Звідки команда'"
       stadium:
         name: "Поле 'Назва стадіону'"
-        location_id: "Поле 'Населений пункт'"
+        location: "Поле 'Населений пункт'"
       tournament:
         name: "Поле 'Назва турніру'"
       match:
@@ -119,6 +119,7 @@ uk:
       name: "Назва стадіону"
       street: "Вулиця"
       location: "Населений пункт"
+      prompt: "-- виберіть населений пункт --"
       placeholder:
         name: "Введіть назву стадіону"
         street: "Введіть вулицю та будинок"
