--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -9,18 +9,21 @@ uk:
       tournament: "Турнір створено"
       stadium: "Стадіон створено"
       match: "Матч створено"
+      post: "Допис створено"
     update:
       location: "Локацію оновлено"
       team: "Команду оновлено"
       tournament: "Турнір оновлено"
       stadium: "Стадіон оновлено"
       match: "Матч оновлено"
+      post: "Допис оновлено"
     destroy:
       location: "Локацію видалено"
       team: "Команду видалено"
       tournament: "Турнір видалено"
       stadium: "Стадіон видалено"
       match: "Матч видалено"
+      post: "Допис видалено"
   
   activerecord:
     attributes:
