--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -195,3 +195,6 @@ uk:
       title: "Новий допис"
     edit:
       title: "Редагувати допис"
+    show:
+      region: "обл."
+      district: "р-н"
