add postdate to posts controller and views

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -189,6 +189,7 @@ uk:
       title: "Заголовок"
       location: "Локація"
       content: "Текст допису"
+      postdate: "Дата допису"
       placeholder:
         title: "Введіть назву допису"
       prompt:
