add teamtypes to teams controller and views

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -111,9 +111,11 @@ uk:
     new:
       title: "Нова команда"
     form:
+      teamtype: "Абревіатура перед назвою"
       name: "Назва команди"
       represent: "Звідки команда"
       placeholder:
+        teamtype: "Ведіть абревіатуру перед назвою (якщо є)"
         name: "Введіть назву команди"
         represent: "Введіть населений пункт чи громаду"
     edit:
