change match stage to can be blank

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -176,7 +176,7 @@ uk:
       score: "Рахунок"
       stage: "Тур або етап змагань"
       placeholder:
-        stage: "Введіть тур або етап"
+        stage: "Введіть тур або етап (якщо є)"
       prompt:
        tournament: "-- виберіть турнір --"
        stadium: "-- виберіть місце матчу --"
