add post to matches

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -178,6 +178,7 @@ uk:
       stadium: "Стадіон"
       hometeam: "Господарі"
       visitorteam: "Гості"
+      post: "Допис про матч"
       score: "Рахунок"
       stage: "Тур або етап змагань"
       placeholder:
@@ -187,6 +188,7 @@ uk:
        stadium: "-- виберіть місце матчу --"
        hometeam: "-- виберіть команду-господаря --"
        visitorteam: "-- виберіть гостьову команду --"
+       post: "-- виберіть допис про матч --"
     new:
       title: "Новий матч"
     edit:
