add searchposts for tournament

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -176,6 +176,10 @@ uk:
       title: "Новий турнір"
     edit:
       title: "Редагувати турнір"
+    searchposts:
+      title_part1: "Дописи з турніру"
+      title_part2: "загалом"
+      title_empty: "відсутні"
 
   matches:
     index:
