add spoiler as cover image to post

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -219,6 +219,7 @@ uk:
       location: "Локація"
       content: "Текст допису"
       postdate: "Дата допису"
+      spoiler: "Прев'ю"
       placeholder:
         title: "Введіть назву допису"
       prompt:
