--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -123,6 +123,7 @@ uk:
       teamtype: "Абревіатура"
       name: "Назва команди"
       represent: "Звідки команда"
+      teamlogo: "Емблема команди"
       teaminfo: "Про команду"
       placeholder:
         teamtype: "(якщо є)"
