--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -100,6 +100,10 @@ uk:
     posts: "Дописи"
     football: "Футбол"
     stadium_posts: "Про стадіони"
+    other: "Інше"
+    hockey: "Хокей"
+    rugby: "Регбі"
+    karting: "Картинг"
 
   locations:
     index:
