add message to team show page when teaminfo empty

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -155,6 +155,8 @@ uk:
       title_part1: "Дописи про матчі команди"
       title_part2: "загалом"
       title_empty: "відсутні"
+    show:
+      teaminfo_empty: "Тут має бути про команду - історія, досягнення і т. п. Але поки ця інформація ще незібрана. "
   
   stadia:
     index:
