--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -11,6 +11,7 @@ uk:
       match: "Матч створено"
       post: "Допис створено"
       stadium_post: "Зв'язок 'репортаж про стадіон' створено"
+      album: "Фотоальбом створено"
     update:
       location: "Локацію оновлено"
       team: "Команду оновлено"
@@ -19,6 +20,7 @@ uk:
       match: "Матч оновлено"
       post: "Допис оновлено"
       stadium_post: "Зв'язок 'репортаж про стадіон' оновлено"
+      album: "Фотоальбом оновлено"
     destroy:
       location: "Локацію видалено"
       team: "Команду видалено"
@@ -27,6 +29,7 @@ uk:
       match: "Матч видалено"
       post: "Допис видалено"
       stadium_post: "Зв'язок 'репортаж про стадіон' видалено"
+      album: "Фотоальбом видалено"
   
   activerecord:
     attributes:
