add albums to navbar

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -107,6 +107,8 @@ uk:
     hockey: "Хокей"
     rugby: "Регбі"
     karting: "Картинг"
+    albums: "Фотоальбоми"
+    logout: "Вийти"
 
   locations:
     index:
