change in albums and matches forms - show message when it is not free posts

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -220,6 +220,7 @@ uk:
       tour: "Тур"
       playoff: "фіналу"
     form:
+      posts_empty: "Неможливо створити новий матч, адже всі наявні дописи вже зайняті. Потрібно створити новий допис або видалити вже існуючий матч"
       tournament: "Турнір"
       matchdate: "Дата матчу"
       stadium: "Стадіон"
@@ -272,6 +273,7 @@ uk:
     index:
       title: "Фотоальбоми"
     form:
+      posts_empty: "Неможливо створити новий альбом, адже всі наявні дописи вже зайняті. Потрібно створити новий допис або видалити вже існуючий альбом"
       post: "Допис до фоторепортажу"
       prompt:
         post: "-- виберіть допис --"
