--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -103,6 +103,7 @@ uk:
     rugby: "Регбі"
     karting: "Картинг"
     albums: "Фотоальбоми"
+    login: "Війти"
     logout: "Вийти"
 
   locations:
