change in posts and stadia forms - show message when it is not free posts

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -167,6 +167,7 @@ uk:
       region: "обл."
       district: "р-н"
     form:
+      locations_empty: "Неможливо додати новий стадіон, спочатку потрібно створити хоча б одну локацію"
       name: "Назва стадіону"
       street: "Вулиця"
       location: "Населений пункт"
@@ -247,6 +248,7 @@ uk:
     index:
       title: "Дописи"
     form:
+      locations_empty: "Неможливо додати новий допис, спочатку потрібно створити хоча б одну локацію"
       title: "Заголовок"
       location: "Локація"
       content: "Текст допису"
