change in matches forms - show message when  coressponding formhelper are empty

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -52,6 +52,7 @@ uk:
         tournament: "Поле 'Турнір'"
         stadium: "Поле 'Стадіон'"
         stage: "Поле 'Тур або етап змагань'"
+        post: "Поле 'Допис'"
       post:
         title: "Поле 'Заголовок'"
         location: "Поле 'Локація'"
@@ -223,6 +224,9 @@ uk:
       playoff: "фіналу"
     form:
       posts_empty: "Неможливо створити новий матч, адже всі наявні дописи вже зайняті. Потрібно створити новий допис або видалити вже існуючий матч"
+      stadia_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б один стадіон"
+      tournaments_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б один турнір"
+      teams_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б одину команду, а краще дві - господарі і гості"
       tournament: "Турнір"
       matchdate: "Дата матчу"
       stadium: "Стадіон"
