small changes in locales text

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -223,10 +223,10 @@ uk:
       tour: "Тур"
       playoff: "фіналу"
     form:
-      posts_empty: "Неможливо створити новий матч, адже всі наявні дописи вже зайняті. Потрібно створити новий допис або видалити вже існуючий матч"
+      posts_empty: "Неможливо створити новий матч, адже всі наявні дописи вже зайняті або немає жодного допису. Потрібно створити новий допис або видалити вже існуючий матч"
       stadia_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б один стадіон"
       tournaments_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б один турнір"
-      teams_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б одину команду, а краще дві - господарі і гості"
+      teams_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б одну команду, а краще дві - господарі і гості"
       tournament: "Турнір"
       matchdate: "Дата матчу"
       stadium: "Стадіон"
@@ -280,7 +280,7 @@ uk:
     index:
       title: "Фотоальбоми"
     form:
-      posts_empty: "Неможливо створити новий альбом, адже всі наявні дописи вже зайняті. Потрібно створити новий допис або видалити вже існуючий альбом"
+      posts_empty: "Неможливо створити новий альбом, адже всі наявні дописи вже зайняті або немає жодного допису. Потрібно створити новий допис або видалити вже існуючий альбом"
       post: "Допис до фоторепортажу"
       prompt:
         post: "-- виберіть допис --"
