recreate model, controller, views for connection 'post about stadium'

--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -11,6 +11,7 @@ uk:
       match: "Матч створено"
       post: "Допис створено"
       album: "Фотоальбом створено"
+      post_about_stadium: "Зв'язок 'Допис про стадіон' створено"
     update:
       location: "Локацію оновлено"
       team: "Команду оновлено"
@@ -19,6 +20,7 @@ uk:
       match: "Матч оновлено"
       post: "Допис оновлено"
       album: "Фотоальбом оновлено"
+      post_about_stadium: "Зв'язок 'Допис про стадіон' оновлено"
     destroy:
       location: "Локацію видалено"
       team: "Команду видалено"
@@ -27,6 +29,7 @@ uk:
       match: "Матч видалено"
       post: "Допис видалено"
       album: "Фотоальбом видалено"
+      post_about_stadium: "Зв'язок 'Допис про стадіон' видалено"
 
   activerecord:
     attributes:
@@ -67,6 +70,10 @@ uk:
           other: "Інше"
       album:
         post: "Поле 'Допис до фоторепортажу'"
+      post_about_stadium:
+        post: "Поле 'Допис'"
+        stadium: "Поле 'Стадіон'"
+
 
   forms:
       messages:
@@ -85,6 +92,7 @@ uk:
       match: "Додати матч"
       post: "Додати допис"
       album: "Додати фотоальбом"
+      post_about_stadium: "Додати зв'язок 'Допис про стадіон'"
     submit: "Підтвердити"
     delete: "Видалити"
 
@@ -97,6 +105,7 @@ uk:
     stadia: "Стадіони"
     tournaments: "Турніри"
     matches: "Матчі"
+    post_about_stadia: "Зв'язки"
     posts: "Дописи"
     football: "Футбол"
     other: "Інше"
@@ -223,7 +232,7 @@ uk:
       tour: "Тур"
       playoff: "фіналу"
     form:
-      posts_empty: "Неможливо створити новий матч, адже всі наявні дописи вже зайняті або немає жодного допису. Потрібно створити новий допис або видалити вже існуючий матч"
+      posts_empty: "Неможливо створити новий матч, адже всі наявні дописи про матчі вже зайняті або немає жодного такого допису. Потрібно створити новий допис з тематикою 'футбол' або видалити вже існуючий матч"
       stadia_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б один стадіон"
       tournaments_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б один турнір"
       teams_empty: "Неможливо створити новий матч, спочатку потрібно створити хоча б одну команду, а краще дві - господарі і гості"
@@ -305,3 +314,23 @@ uk:
         password: "Пароль"
         remember: " Запам'ятати мене"
         login: "Ввійти"
+
+  post_about_stadia:
+    index:
+      title: "Зв'язки 'Допис про стадіон'"
+    post_about_stadia:
+      street: "вул."
+      region: "обл."
+      district: "р-н"
+    form:
+      posts_empty: "Неможливо створити новий зв'язок, адже всі наявні дописи про стадіони вже зайняті або немає жодного такого допису. Потрібно створити новий допис з тематикою 'стадіон' або видалити вже існуючий зв'язок"
+      stadia_empty: "Неможливо створити новий зв'зок, спочатку потрібно створити хоча б один стадіон"
+      stadium: "Стадіон"
+      post: "Допис"
+      prompt:
+        stadium: "-- виберіть стадіон --"
+        post: "-- виберіть допис --"
+    new:
+      title: "Новий зв'язок 'Допис про стадіон'"
+    edit:
+      title: "Редагувати зв'язок 'Допис про стадіон'"
