--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -290,7 +290,7 @@ uk:
       title: "Фотоальбоми"
     form:
       posts_empty: "Неможливо створити новий альбом, адже всі наявні дописи вже зайняті або немає жодного допису. Потрібно створити новий допис або видалити вже існуючий альбом"
-      post: "Допис до фоторепортажу"
+      post: "Фотоальбом до допису"
       prompt:
         post: "-- виберіть допис --"
       photos: "Фотографії"
